# VerSecBot

./: Dockerfile  README.md  docker-bake.hcl  pyproject.toml  taskfile.yml
.github/workflows/: distribution.yml
deploy/: config.toml
src/: jobs.py  log_util.py  main.py
src/app/: jobs.py  settings.py
src/plugins/personal_bests/: __init__.py  logging.py  main.py  settings.py
src/speedrun_secretary/: jobs.py  main.py  settings.py
src/versecbot/: __main__.py  jobs.py  settings.py
supportive_shade/: Dockerfile  python-requirements.txt
supportive_shade/src/: jobs.py  log_util.py  main.py  settings.py  start.sh
supportive_shade/src/plugins/personal_bests/: __init__.py  logging.py  main.py  settings.py
