[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[project]
  name = "speedrun_secretary"
  version = "0.2"
  authors = [{ name = "Museus", email = "speedrun.secretary@museus.dev" }]
  description = "Extendable Discord Bot to manage common speedrun moderation tasks"
  readme = "README.md"
  requires-python = ">=3.8"
  classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
  ]

  license = "MIT"
  license-files = ["LICEN[CS]E*"]

  [project.urls]
    Homepage = "https://github.com/Museus/SupportiveShade"
    Issues = "https://github.com/Museus/SupportiveShade/issues"
